# autotool-bonn

./: .gitignore  AUTHORS  Autotool.cabal  INSTALL  INSTALL2  README  TABLES  config.mk.in  configure  configure.ac
client/: autolat-client.cabal
client/src/: Happs.hs  Main.hs
collection/: Setup.lhs  autotool-collection.cabal  deps
rest/: autotool-rest.cabal
server/: NOTES  autotool-server.cabal  copy.sh  gen.sh
server/src/: Config.hs.sample  Info.hs  Main.hs
src/: Beside.hs  Blank.hs  Challenger.hs  Condition.hs  Debug.hs  Depth.hs  Expression.hs  Fun.hs  Grammatik.hs  HTWK.hs  Hex.hs  INSTALL  JVM.hs  Language.hs  Local.hs  Local.hs.in  Machine.hs  Main.hs  Makefile  Makefile-defs  Makefile.htwk  Makefile.uni  NPDA.hs  PCP.hs  PL.hs  RAM.hs  Suggest.hs  Sync.hs  TODO  TextConfig.hs  ToDoc.hs  Tree.hs  Turing.hs  Uni.hs  Upload.hs  autotool.pkg  ghc-defs.sh  index.html  pento.hs  rest.hs  (+3 more)
src/AVLBaumBonn/: Central.hs  Conversion.hs  GraphViz.hs  Quiz.hs
src/Algebraic/: Central.hs  Class.hs  Config.hs  Config.hs.drift  Graph.hs  Instance.hs  Instance.hs.drift  Integer.hs  Nested.hs  Quiz.hs  Relation.hs  STGraph.hs  Set.hs  Times.hs
src/Algebraic2/: Central.hs  Class.hs  Config.hs  Instance.hs  Instance.hs.drift  Quiz.hs
src/Arithmetic/: Op.hs
src/ArrayBonn/: .Program.hs.swp  Central.hs  Config.hs  Environment.hs  Expression.hs  Operator.hs  Program.hs  ProgramG.hs  Roll.hs  Semantics.hs  Statement.hs  Type.hs  Value.hs
src/Baum/: AVL.hs  Bin.hs  BinHeap.hs  Binary.hs  Central.hs  Config.hs  Config.hs.drift  Dot.hs  Draw.hs  Label.hs  Leftist.hs  List.hs  Order.hs  Order.hs.drift  Quiz.hs  Reconstruct.hs  RedBlack.hs  Roll.hs  Traverse.hs  Type.hs  ZweiDrei.hs
src/Binpack/: Approximation.hs  Example.hs  FFD.hs  Instance.hs  Instance.hs.drift  InstanceTH.hs  Interface.hs  Param.hs  ParamTH.hs  Quiz.hs
src/Boolean/: Data.hs  Equiv.hs  Eval.hs  Instance.hs  Instance.hs.drift  Op.hs  Quiz.hs
src/Boolean2/: Instance.hs  Instance.hs.drift  Quiz.hs
src/Brainfuck/: Env.hs  Example.hs  Machine.hs  Make.hs  Readme  Syntax.hs
src/CL/: Combinator.hs  Data.hs  Derivation.hs  Find.hs  Reader.hs  Reduce.hs  Substitution.hs  Term.hs  ToDoc.hs
src/CNF/: Eval.hs  Example.hs  Form.hs  Optimize.hs
src/Challenger/: Einsendung.hs  Ident.hs  Partial.hs  Problem.hs
src/Code/: Burrows_Wheeler.hs  Check.hs  Class.hs  Compress.hs  Formal.hs  Hamming.hs  Huffman.hs  LZ.hs  Measure.hs  Move_To_Front.hs  Nocode.hs  Nonprefix.hs  Param.hs  Param.hs.drift  Prefix.hs  Quiz.hs  Type.hs  Type.hs.drift
src/Collatz/: Config.hs  Config.hs.drift  Inverse.hs  Long.hs  Parameter.hs  Parameter.hs.drift  Plain.hs  Roll.hs
src/Control/: Aufgabe.hs  HTMLshortcuts.hs  Passwort.hs  Punkt.hs  Queries.hs  SQL.hs  Schule.hs  Score.hs  Semester.hs  Stud_Grp.hs  Student.hs  TH.hs  Time.hs  Tutor.hs  Types.hs  Types.hs.drift  Vorlesung.hs  XmlTime.hs
src/Convert/: Input.hs  Input.hs.drift  Language.hs  Main.hs  Type.hs  Type.hs.drift  Wanted.hs
src/DB/: Action.hs  CGI.hs  Client.hs  Config.hs  Data.hs  Data.hs.drift  Protocol.hs  Protocol.hs.drift  Record.hs  Record.hs.drift  Server.hs  Util.hs  index.html
src/Diffie_Hellman/: Break.hs  Config.hs  Param.hs  Quiz.hs
src/EditDistance/: CalculateTable.hs  Central.hs  Data.hs  Generator.hs  Quiz.hs
src/Exp/: Convert.hs  Guess.hs  Property.hs  Property.hs.drift  Quiz.hs  Quiz.hs.drift  Roll.hs  Shortest_Missing.hs  Shortest_Missing_Solver.hs  Smaller.hs  Smaller_Solver.hs  Test.hs
src/Expression/: Class.hs  Expression.hs  Instances.hs  Op.hs  Reader.hs  Tokens.hs  Type.hs
src/FP/: Arrow.hs  Check.hs  Conf.hs  Conf.hs.drift  Env.hs  Expression.hs  Instance.hs  Quiz.hs  Reconstruct.hs  Roll.hs  Type.hs
src/Faktor/: Certify.hs  Euklid.hs  Faktor.hs  Inverse.hs  Makefile  Notused.hs  Param.hs  Param.hs.drift  Prim.hs  Quiz.hs  RSA.hs  Times.hs  Type.hs
src/Finite/: Example.hs  Makefile  Run.hs  Type.hs  World.hs  Wort.hs  hucks
src/Flow/: Action.hs  Actions.hs  Auto.hs  Central.hs  Conditions.hs  Data.hs  Expression.hs  Form.hs  Goto.hs  Program.hs  State.hs  Struct.hs  Trace.hs  Transit.hs
src/Fun/: Cache.hs  Cache.hs.drift  Check.hs  Create.hs  Direct.hs  Examples.hs  Machine.hs  Make.hs  Mark.hs  Matrix.hs  Quiz.hs  State.hs  Step.hs  Table.hs  Type.hs  Type.hs.drift
src/Genetic/: Central.hs  Config.hs  Parallel.hs
src/Grammatik/: Ableitung.hs  Akzeptor.hs  CF_Check.hs  CYK_Arrays.hs  CYK_Tables.hs  Check.hs  Checker.hs  Chomsky.hs  Config.hs  DPL_CYK.hs  Eindeutig.hs  Epsfrei.hs  Erreichbar.hs  Generate.hs  Grace.hs  Hierarchie.hs  Kettenfrei.hs  Links_Ableitung.hs  Machine.hs  Produktiv.hs  Property.hs  Property.hs.drift  Reduziert.hs  Trace.hs  Type.hs  Type.hs.drift  Zeige.hs
src/Graph/: Color.hs  Connected.hs  Cross.hs  Ham.hs  Iso.hs  Kreisfrei.hs  MinSep.hs  Nachbar.hs  Op.hs  Op.hs.typed  PartialKTree.hs  Ramsey.hs  Restriction.hs  Restriction.hs.drift  Selfcom.hs  Shell.hs  TreeWidth.hs  Util.hs  Van_der_Waerden.hs  Weighted.hs
src/HTWK/: SS04.hs
src/Hanoi/: Config.hs  Config.hs.drift  Fast.hs  Move.hs  QSearch.hs  Quiz.hs  Restriction.hs  Restriction.hs.drift  Semantik.hs  Solve.hs  Type.hs  Type.hs.drift
src/Haskell/: Central.hs  Data.hs  SmallCheck.hs
src/HeapSort/: Central.hs  Data.hs  Generator.hs  GraphViz.hs  Operation.hs  Quiz.hs  Semantics.hs  Tree.hs
src/Hilbert/: Actions.hs  Actions.hs.drift  Assert.hs  Axioms.hs  BFS.hs  Central.hs  Derivation.hs  Env.hs  Find.hs  Hilbert.hs  Infer.hs  Look.hs  Match.hs  Ops.hs  Param.hs  Param.hs.drift  Proof.hs  Read.hs  Rules.hs  Sat.hs  Search.hs  Silbert.hs  Sub.hs  Syntax.hs  Tree.hs  Unify.hs  check.in  einsetz.in  hilbert.pl  kontra.in  loesung62.in  loesung63.in  mopo.in  not.in  self.in  silbert.in  unused.hs  vertausch.in  xx.in
src/Inter/: .cvsignore  Action.hs  Action.hs.drift  Area.hs  Bank.hs  Boiler.hs  Boiler.hs.in  Check.hs  Client.hs.example  Collector.hs  Common.hs  Crypt.hs  DateTime.hs  Edit.hs  Env.hs  Error.hs  (+34 more)
super/: Makefile  super.cabal
test/: autotool-test.cabal  test.cabal
trial/: Makefile  deps  modules  trial.cabal
(+1300 files in other folders)
