Name:           Autotool
Version:        0.0
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  base, parsec, mtl, xhtml, hsql, hsql-mysql, unix, HaXml, Autolib
Synopsis:       Interactive (CGI) exercises in theoretical computer science
Hs-source-dirs:	src, src/control
ghc-options: 
    -DHSQL14 
    -fglasgow-exts 
    -fallow-undecidable-instances 
    -fallow-incoherent-instances
Extensions: TemplateHaskell, CPP
Exposed-modules:
    Baum.Type
    Baum.Order
    Baum.Config
    Baum.Traverse
    Baum.Such.Op
    Baum.Such.Config
    Baum.Such.Class
    Baum.Such.Generate
    Baum.Such.Inter
    Baum.Such.Central
    Baum.Label
    Baum.Bin
    Baum.Roll
    Baum.Reconstruct
    Baum.Binary.Type
    Baum.Binary.Show
    Baum.Binary.Ops
    Baum.ZweiDrei.Type
    Baum.ZweiDrei.Ops
    Baum.ZweiDrei.Show
    Baum.ZweiDrei
    Baum.Binary
    Code.Burrows_Wheeler.Work
    Code.Burrows_Wheeler.Data
    Code.Hamming.Data
    Code.Hamming.Check
    Code.Hamming.Partial
    Code.Huffman.Config
    Code.Huffman.Throw
    Code.Huffman.LR
    Code.Huffman.Make
    Code.Huffman.Test
    Code.Huffman.Partial
    Code.Huffman.Boiler
    Code.Move_To_Front.Data
    Code.Move_To_Front.Work
    Code.Param
    Code.Type
    Code.Burrows_Wheeler
    Code.Move_To_Front
    Code.LZ
    Code.Measure
    Code.Check
    Code.LZ.Data
    Code.LZ.Book
    Code.Hamming
    Code.Class
    Code.Quiz
    Code.Compress
    Condition
    Gateway.Help
    Gateway.Errmsg
    Gateway.FormData
    Gateway.My_CGI
    Gateway.CGI
    Boolean.Op
    Boolean.Eval
    Boolean.Equiv
    Boolean.Instance
    Boolean.Quiz
    Challenger.Ident
    Challenger.Einsendung
    Challenger.Partial
    Exp.Property
    Exp.Test
    Exp.Roll
    Exp.Quiz
    Exp.Smaller
    Exp.Convert
    Expression.Op
    Faktor.Euklid.Param
    Faktor.Inverse.Param
    Faktor.Type
    Faktor.Prim
    Faktor.Param
    Faktor.Inverse
    Faktor.Euklid
    Faktor.Times
    Faktor.Quiz
    Faktor.Faktor
    Faktor.Times.Param
    Fun.Quiz.Type
    Fun.Cache
    Fun.Type
    Fun.Examples
    Fun.State
    Fun.Step
    Fun.Machine
    Fun.Check
    Fun.Table
    Fun.Create
    Fun.Make
    Fun.Quiz
    Grammatik.CF.Chomsky.Type
    Grammatik.CF.Instance.Config
    Grammatik.CF.Problem.Config
    Grammatik.CF.Baum
    Grammatik.CF.Eindeutig
    Grammatik.CF.Nullable
    Grammatik.CF.Kettenfrei
    Grammatik.CF.Epsfrei
    Grammatik.CF.Chomsky
    Grammatik.CF.CYK_Tables
    Grammatik.CF.CYK_Arrays
    Grammatik.CF.DPL_CYK
    Grammatik.CF.Zeige
    Grammatik.CF.Yeah_Noh
    Grammatik.CF.Interface
    Grammatik.Type
    Grammatik.Erreichbar
    Grammatik.Produktiv
    Grammatik.Reduziert
    Grammatik.Ableitung
    Grammatik.Zeige
    Grammatik.Hierarchie
    Grammatik.Property
    Grammatik.Check
    Graph.Cage.Config
    Graph.Cage.Central
    Graph.Color
    Graph.Util
    Graph.Iso
    Graph.Bi.Config
    Graph.Bi.Proof
    Graph.Bi.Plain
    Graph.Bi.Quiz
    Graph.VC.Param
    Graph.VC.ParamSAT
    Graph.VC.Input
    Graph.VC.SAT
    Graph.VC.Central
    Graph.VC.VCSAT
    Graph.Col.Plain
    Graph.Col.Config
    Graph.Col.Quiz
    Graph.Graceful.Central
    Graph.Cross
    Graph.TreeWidth
    Graph.MinSep
    Graph.Nachbar
    Graph.Selfcom
    Graph.PartialKTree
    Graph.Circle.Config
    Graph.Circle.Plain
    Graph.Circle.Quiz
    Graph.PartialKTree.Config
    Graph.PartialKTree.Quiz
    Graph.PartialKTree.Cliques
    Graph.PartialKTree.Central
    Graph.Bisekt.Config
    Graph.Bisekt.Data
    Graph.Bisekt.Plain
    Graph.Bisekt.Quiz
    Graph.Way.Config
    Graph.Way.Input
    Graph.Way.Plain
    Graph.Way.Quiz
    Hanoi.Type
    Hanoi.Move
    Hanoi.Semantik
    Hanoi.Quiz
    Inter.Motd
    Inter.Click
    Inter.Crypt
    Inter.Types
    Inter.Param
    Inter.Make
    Inter.Quiz
    Inter.Env
    Inter.Area
    Inter.Evaluate
    Inter.Logged
    Inter.Store
    Inter.Bank
    Inter.Common
    Inter.Login
    Inter.Statistik
    Inter.Collector
    Inter.DateTime
    Inter.Tutor
    Inter.Student
    JVM.Type
    JVM.Builtin
    JVM.Memory
    JVM.State
    JVM.Step
    JVM.Machine
    JVM.Example
    JVM.Check
    JVM.Make
    LCS.Code
    LCS.Data
    LCS.Config
    LCS.Quiz
    LCS.Instance
    Language.Syntax
    Language.Genau
    Language.Type
    Language.RX
    Language.Power
    Language.Pali
    Language.Lukas
    Language.Gleich
    Language.IJK
    Language.Mutate
    Language.AK
    Language.Center
    Language.ABCdiff
    Language.Inter
    Machine.Acceptor.Type
    Machine.Acceptor.Inter
    Machine.Numerical.Type
    Machine.Numerical.Config
    Machine.Numerical.Inter
    Machine.Numerical.Make
    Machine.Var
    Machine.History
    Machine.Class
    Machine.Akzeptieren
    Machine.Vorrechnen
    Machine.Fun
    NFA.Property
    NFA.Roll
    NFA.Quiz
    NFA.Test
    NFA.Convert
    NFA.Equiv.Core
    NFA.Equiv.Conf
    NFA.Equiv.Generate
    NFA.Equiv.Challenger
    NPDA.Type
    NPDA.Dot
    NPDA.Beispiel
    NPDA.Konfiguration
    NPDA.Nachfolger
    NPDA.Sane
    NPDA.Det
    NPDA.Property
    NPDA.Config
    NPDA.Machine
    NPDA.Inter
    PCProblem.Param
    PCProblem.Data
    PCProblem.Type
    PCProblem.Konfig
    PCProblem.Solver
    PCProblem.Generator
    PCProblem.Quiz
    Pump.CF.Type
    Pump.REG.Type
    Pump.Type
    Pump.REG
    Pump.CF
    Pump.Quiz
    Pump.Conf
    Pump.Negativ
    Pump.Positiv
    Pump.Inter
    RAM.Builtin
    RAM.Type
    RAM.Memory
    RAM.Property
    RAM.State
    RAM.Step
    RAM.Machine
    RAM.Example
    RAM.Check
    RAM.Make
    SAT.Types
    SAT.State
    SAT.Wert
    SAT.Param
    SAT.Generator
    SAT.Beispiel
    SAT.SAT
    Sortier.Netz.Xml
    Sortier.Netz.Type
    Sortier.Netz.Example
    Sortier.Netz.Rechnung
    Sortier.Netz.Bild
    Sortier.Netz.Check
    Sortier.Merge.Param
    Sortier.Merge.Check
    Sortier.Median.Param
    Sortier.Median.Check
    Turing.Type
    Turing.Dot
    Turing.Check
    Turing.Konfiguration
    Turing.Nachfolger
    Turing.Property
    Turing.Machine
    Turing.Example
    Turing.Config
    Turing.Make
    Util.Datei.Base
    Util.Datei
    Util.Cache
    RAM
    Arithmetic.Op
    Codec.Encryption.MD5Aux
    Codec.Encryption.Utils
    Codec.Encryption.MD5
    JVM
    Control.Aufgabe.Typ
    Control.Aufgabe.DB
    Control.Student.Type
    Control.Student.DB
    Control.Student.CGI
    Control.Gruppe.Typ
    Control.Gruppe.DB
    Control.Gruppe.CGI
    Control.SQL
    Control.Types
    Control.Student
    Control.Vorlesung.Typ
    Control.Vorlesung.DB
    Control.Vorlesung.CGI
    Control.Schule
    Control.Passwort
    Control.Stud_Aufg.Typ
    Control.Stud_Aufg.DB
    Control.Stud_Grp
    Control.Stud_Aufg
    Control.Punkt
    Control.Schule.Typ
    Control.Schule.DB
    Control.Aufgabe
    Control.Gruppe
    Control.Vorlesung
    Control.Stud_Grp.Typ
    Control.Stud_Grp.DB
    Collatz.Parameter
    Collatz.Config
    Collatz.Long
    Collatz.Roll
    Collatz.Plain
    Collatz.Inverse
    Robots.Data
    Robots.Config
    Robots.Examples
    Robots.Hull
    Robots.Nice
    Robots.Final
    Robots.Move
    Robots.Solver
    Robots.Quiz
    Robots.Generator
    Robots.Interface
    Local
    Type.Data
    Type.Tree
    Type.Infer
    Type.Check
    Type.Quiz
    Language
    Debug
    Palindrom.Plain
    Convert.Input
    Convert.Type
    RM.Type
    RM.Memory
    RM.State
    RM.Step
    RM.Check
    RM.Machine
    RM.Make
    Turing
    Upload
    Blank
    Tree.Dot
    Tree.Class
    Upload.Config
    Number.Base.Param
    Number.Base.Data
    Number.Base.Central
    Number.Float.Data
    Number.Float.Config
    Number.Float.Near
    Number.Float.Roll
    Number.Float.From
    Number.Float.To
    Number.Wert
    Partition.Roll
    Partition.Param
    Partition.Beispiel
    Partition.Central
    KnapsackFraction.Solve
    KnapsackFraction.Param
    KnapsackFraction.Central
    Tree
    Hilbert.Env
    Hilbert.Actions
    Hilbert.Derivation
    Hilbert.Syntax
    Hilbert.Axioms
    Hilbert.Param
    Hilbert.Central
    PL.Data
    PL.Reader
    PL.ToDoc
    PL.Type
    PL.Param
    PL.Util
    PL.Signatur
    PL.Struktur
    PL.Interpretation
    PL.Semantik
    PL.Find_Model
    Rewriting.Derive.Config
    Rewriting.Derive.Instance
    Rewriting.Derive.Quiz
    Rewriting.TRS.Raw
    Rewriting.TRS
    Rewriting.Step
    Rewriting.Roller
    Rewriting.Overlap
    Rewriting.Check
    Rewriting.Steps
    Rewriting.Machine
    Rewriting.Numerical
    Rewriting.Derive

