Name:           autotool
Version:        1.0
-- License:        GPL
-- License-File:   LICENSE
Author:         Johannes Waldmann
Maintainer:     Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       E-Testing
Synopsis:       E-Testing
Description:    E-Testing
Stability:      Experimental
Cabal-Version:  >=1.2
Build-Type:     Simple

Executable Trial.cgi
  Build-Depends:
    autolib-todoc,autolib-data,autolib-reader,
    autolib-output,autolib-reporter,
    autolib-util,autolib-fa,autolib-fta,
    autolib-graph,autolib-relation,autolib-exp,
    autolib-rewriting,autolib-dot,autolib-algorithm,
    base == 3.*,parsec==2.*, old-locale,old-time,
    xhtml==3000.*,HaXml==1.13.*,cgi,
    hsql==1.7.1,hsql-mysql==1.7.1,
    containers,directory,random,mtl,
    process,unix,
    haxr==3000.1.1.3,haxr-th,
    obdd,array,pretty
  GHC-Options:    -Wall
  Extensions: DeriveDataTypeable,
     MultiParamTypeClasses,
     TypeSynonymInstances,
     FlexibleInstances,
     FlexibleContexts,
     UndecidableInstances,
     IncoherentInstances,
     ScopedTypeVariables,
     FunctionalDependencies
  Hs-source-dirs: src , src/control
  Main-Is: Inter/Trial.hs
