Name:           autotool
Version:        1.0
-- License:        GPL
-- License-File:   LICENSE
Author:         Bertram Felgenhauer, Mirko Rahn, Alf Richter, Johannes Waldmann
Maintainer:     Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       E-Testing
Synopsis:       E-Testing
Description:    E-Testing
Stability:      Experimental
Cabal-Version:  >=1.2
Build-Type:     Simple

Flag super
  Description: Build Super.cgi
  Default: False

Flag trial
  Description: Build Trial.cgi
  Default: True

Executable Trial.cgi
  if !flag(trial)
    Buildable: False
  Build-Depends:
    autolib-todoc,autolib-data,autolib-reader,
    autolib-output,autolib-reporter,
    autolib-util,autolib-fa,autolib-fta,
    autolib-graph,autolib-relation,autolib-exp,
    autolib-rewriting,autolib-dot,autolib-algorithm,
    base == 3.*,parsec==2.*, old-locale,old-time,
    xhtml==3000.*,cgi,
    hsql==1.7.1,hsql-mysql==1.7.1,
    containers,directory,random,mtl,
    process,unix,
    autolib-transport,
    obdd,array,pretty
  GHC-Options:    -Wall
  Extensions:
     DeriveDataTypeable,
     MultiParamTypeClasses,
     TypeSynonymInstances,
     FlexibleInstances,
     FlexibleContexts,
     UndecidableInstances,
     ScopedTypeVariables,
     FunctionalDependencies,
     TemplateHaskell
  Hs-source-dirs: src , src/control, common
  Main-Is: Inter/Trial.hs

Executable Super.cgi
  if !flag(super)
    Buildable: False
  Build-Depends:
    autolib-todoc,autolib-data,autolib-reader,
    autolib-output,autolib-reporter,
    autolib-util,autolib-fa,autolib-fta,
    autolib-graph,autolib-relation,autolib-exp,
    autolib-rewriting,autolib-dot,autolib-algorithm,
    base == 3.*,parsec==2.*, old-locale,old-time,
    xhtml==3000.*,cgi,
    hsql==1.7.1,hsql-mysql==1.7.1,
    containers,directory,random,mtl,
    process,unix,
    haxr==3000.1.1.3,haxr-th==3000.0.1,
    obdd,array,pretty
  GHC-Options:    -Wall
  Extensions: DeriveDataTypeable,
     MultiParamTypeClasses,
     TypeSynonymInstances,
     FlexibleInstances,
     FlexibleContexts,
     UndecidableInstances,
     ScopedTypeVariables,
     FunctionalDependencies,
     TemplateHaskell
  Hs-source-dirs: src , src/control, common
  Main-Is: Inter/Super.hs
