Name:           autotool-collection
Version:        1.0
-- License:        GPL
-- License-File:   LICENSE
Author:         Johannes Waldmann
Maintainer:     Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       E-Testing
Synopsis:       collection of E-testing tasks
Description:
  autotool-collection defines the core of autotool: its task types and 
  their semantics.
Stability:      Experimental
Cabal-Version:  >= 1.2
Build-Type:     Simple

Library
    Build-Depends:
        autolib-algorithm,
        autolib-data,
        autolib-dot,
        autolib-exp,
        autolib-fa,
        autolib-fta,
        autolib-graph,
        autolib-output,
        autolib-reader,
        autolib-relation,
        autolib-reporter,
        autolib-rewriting,
        autolib-todoc,
        autolib-util,
        autolib-transport,
        base >= 3 && < 3.1,
        hsql >= 1.7.1 && < 1.8,
        hsql-mysql >= 1.7.1 && < 1.8,
        random >= 1 && < 1.1,
        parsec >= 2.1 && < 2.2,
        containers >= 0.2 && < 0.3,
        xhtml >= 3000.2 && < 3000.3,
        cgi >= 3001.1.7 && < 3001.2,
        mtl >= 1.1 && < 1.2,
        old-locale >= 1 && < 1.1,
        old-time >= 1 && < 1.1,
        process >= 1 && < 1.1,
        directory >= 1 && < 1.1,
        unix >= 2.3 && < 2.4,
        obdd >= 0.2 && < 0.3,
        array >= 0.2 && < 0.3,
        pretty >= 1 && < 1.1
    GHC-Options:    -Wall
    Extensions:
        DeriveDataTypeable
        MultiParamTypeClasses
        TypeSynonymInstances
        FlexibleInstances
        FlexibleContexts
        UndecidableInstances
        ScopedTypeVariables
        FunctionalDependencies
    Hs-source-dirs:
        src
        src/control
        common
    Exposed-Modules:
        Inter.Collector
        Inter.Crypt
        Inter.Quiz
        Inter.Types
        Local
        Debug
        Util.Datei
        Challenger
        Challenger.Partial
        Control.SQL
        Control.Time
        Control.Time.Typ
        Control.Types
        Gateway.Help
    Other-Modules:
        Algebraic.Central
        Algebraic.Class
        Algebraic.Config
        Algebraic.Graph
        Algebraic.Instance
        Algebraic.Integer
        Algebraic.Nested.Op
        Algebraic.Nested.Restriction
        Algebraic.Nested.Type
        Algebraic.Quiz
        Algebraic.Relation
        Algebraic.Relation.Restriction
        Algebraic.STGraph
        Algebraic.Set
        Algebraic2.Central
        Algebraic2.Class
        Algebraic2.Config
        Algebraic2.Instance
        Algebraic2.Quiz
        Arithmetic.Op
        Baum.Bin
        Baum.Binary
        Baum.Binary.Ops
        Baum.Binary.Show
        Baum.Binary.Type
        Baum.Config
        Baum.Draw
        Baum.Label
        Baum.Order
        Baum.Reconstruct
        Baum.Roll
        Baum.Such.Central
        Baum.Such.Class
        Baum.Such.Config
        Baum.Such.Generate
        Baum.Such.Inter
        Baum.Such.Op
        Baum.Traverse
        Baum.Type
        Baum.ZweiDrei
        Baum.ZweiDrei.Ops
        Baum.ZweiDrei.Show
        Baum.ZweiDrei.Type
        Binpack.Approximation
        Binpack.Example
        Binpack.FFD
        Binpack.Instance
        Binpack.InstanceTH
        Binpack.Interface
        Binpack.Param
        Binpack.ParamTH
        Binpack.Quiz
        Blank
        Boolean.Equiv
        Boolean.Eval
        Boolean.Instance
        Boolean.Op
        Boolean.Quiz
        Boolean2.Instance
        Boolean2.Quiz
        Brainfuck.Env
        Brainfuck.Env.AdvancedEnv
        Brainfuck.Example
        Brainfuck.Machine
        Brainfuck.Make
        Brainfuck.Syntax
        Brainfuck.Syntax.Data
        Brainfuck.Syntax.Parse
        Brainfuck.Syntax.Print
        CNF.Eval
        CNF.Example
        CNF.Form
        CNF.Optimize
        Challenger.Einsendung
        Challenger.Ident
        Code.Burrows_Wheeler
        Code.Burrows_Wheeler.Data
        Code.Burrows_Wheeler.Work
        Code.Check
        Code.Class
        Code.Compress
        Code.Formal
        Code.Hamming
        Code.Hamming.Check
        Code.Hamming.Data
        Code.Hamming.Partial
        Code.Huffman.Boiler
        Code.Huffman.Config
        Code.Huffman.LR
        Code.Huffman.Make
        Code.Huffman.Partial
        Code.Huffman.Test
        Code.Huffman.Throw
        Code.LZ
        Code.LZ.Book
        Code.LZ.Data
        Code.Measure
        Code.Move_To_Front
        Code.Move_To_Front.Data
        Code.Move_To_Front.Work
        Code.Nocode
        Code.Nonprefix
        Code.Param
        Code.Quiz
        Code.Type
        Codec.Encryption.MD5
        Codec.Encryption.MD5Aux
        Codec.Encryption.Utils
        Collatz.Config
        Collatz.Inverse
        Collatz.Long
        Collatz.Parameter
        Collatz.Plain
        Collatz.Roll
        Condition
        Convert.Input
        Convert.Language
        Convert.Type
        Diffie_Hellman.Break
        Diffie_Hellman.Config
        Diffie_Hellman.Param
        Diffie_Hellman.Quiz
        Exp.Convert
        Exp.Property
        Exp.Quiz
        Exp.Roll
        Exp.Shortest_Missing
        Exp.Smaller
        Exp.Test
        Expression.Op
        FP.Arrow
        FP.Check
        FP.Conf
        FP.Env
        FP.Expression
        FP.Instance
        FP.Quiz
        FP.Reconstruct
        FP.Roll
        FP.Type
        Faktor.Certify
        Faktor.Euklid
        Faktor.Euklid.Param
        Faktor.Faktor
        Faktor.Inverse
        Faktor.Inverse.Param
        Faktor.Param
        Faktor.Prim
        Faktor.Quiz
        Faktor.Times
        Faktor.Times.Param
        Faktor.Type
        Flow.Action
        Flow.Auto
        Flow.Central
        Flow.Expression
        Flow.Goto
        Flow.Goto.Data
        Flow.Goto.Semantics
        Flow.Program
        Flow.Struct
        Flow.Struct.Data
        Flow.Struct.Semantics
        Fun.Cache
        Fun.Check
        Fun.Create
        Fun.Direct
        Fun.Direct.Config
        Fun.Examples
        Fun.Machine
        Fun.Make
        Fun.Matrix
        Fun.Quiz
        Fun.Quiz.Type
        Fun.Quiz.Type2
        Fun.State
        Fun.Step
        Fun.Table
        Fun.Type
        Grammatik.Ableitung
        Grammatik.Ableitung.Config
        Grammatik.Akzeptor
        Grammatik.CF.Baum
        Grammatik.CF.CYK_Arrays
        Grammatik.CF.CYK_Tables
        Grammatik.CF.Chomsky
        Grammatik.CF.Chomsky.Generate
        Grammatik.CF.Chomsky.Type
        Grammatik.CF.DPL_CYK
        Grammatik.CF.Eindeutig
        Grammatik.CF.Epsfrei
        Grammatik.CF.Instance.Config
        Grammatik.CF.Instance.Config2
        Grammatik.CF.Interface
        Grammatik.CF.Interface2
        Grammatik.CF.Kettenfrei
        Grammatik.CF.Nullable
        Grammatik.CF.Problem.Config
        Grammatik.CF.Yeah_Noh
        Grammatik.CF.Zeige
        Grammatik.Check
        Grammatik.Config
        Grammatik.Erreichbar
        Grammatik.Hierarchie
        Grammatik.Machine
        Grammatik.Produktiv
        Grammatik.Property
        Grammatik.Reduziert
        Grammatik.Type
        Grammatik.Zeige
        Graph.Bi.Config
        Graph.Bi.Plain
        Graph.Bi.Proof
        Graph.Bi.Quiz
        Graph.Bisekt.Config
        Graph.Bisekt.Data
        Graph.Bisekt.Plain
        Graph.Bisekt.Quiz
        Graph.Cage.Central
        Graph.Cage.Config
        Graph.Circle.Config
        Graph.Circle.Plain
        Graph.Circle.Quiz
        Graph.Col.Config
        Graph.Col.Gadget.Central
        Graph.Col.Gadget.Config
        Graph.Col.Plain
        Graph.Col.Quiz
        Graph.Color
        Graph.Cross
        Graph.Graceful.Central
        Graph.Hamilton.Config
        Graph.Hamilton.Plain
        Graph.Hamilton.Quiz
        Graph.Iso
        Graph.MinSep
        Graph.Nachbar
        Graph.Op
        Graph.PartialKTree
        Graph.PartialKTree.Central
        Graph.PartialKTree.Cliques
        Graph.PartialKTree.Config
        Graph.PartialKTree.Quiz
        Graph.Ramsey
        Graph.Restriction
        Graph.Selfcom
        Graph.Series_Parallel.Op
        Graph.Series_Parallel.Type
        Graph.TreeWidth
        Graph.Util
        Graph.VC.Central
        Graph.VC.Input
        Graph.VC.Param
        Graph.VC.ParamSAT
        Graph.VC.SAT
        Graph.VC.VCSAT
        Graph.Van_der_Waerden
        Graph.Way.Config
        Graph.Way.Input
        Graph.Way.Plain
        Graph.Way.Quiz
        Hanoi.Config
        Hanoi.Move
        Hanoi.Quiz
        Hanoi.Restriction
        Hanoi.Semantik
        Hanoi.Type
        Hilbert.Actions
        Hilbert.Axioms
        Hilbert.Central
        Hilbert.Derivation
        Hilbert.Env
        Hilbert.Param
        Hilbert.Syntax
        JVM
        JVM.Builtin
        JVM.Check
        JVM.Example
        JVM.Machine
        JVM.Make
        JVM.Memory
        JVM.State
        JVM.Step
        JVM.Type
        KnapsackFraction.Central
        KnapsackFraction.Param
        KnapsackFraction.Solve
        LCS.Code
        LCS.Config
        LCS.Data
        LCS.Instance
        LCS.Quiz
        Lambda.Alpha
        Lambda.Apply
        Lambda.Backward_Join
        Lambda.Backward_Join.Instance
        Lambda.Backward_Join.Solution
        Lambda.Basic
        Lambda.Data
        Lambda.Derive
        Lambda.Derive.Config
        Lambda.Derive.Instance
        Lambda.IO
        Lambda.Position
        Lambda.Quiz
        Lambda.Roll
        Lambda.Step
        Lambda.Tree
        Lambda.Type
        Language
        Language.ABCdiff
        Language.AK
        Language.Center
        Language.Genau
        Language.Gleich
        Language.Grammatik
        Language.IJK
        Language.Inter
        Language.Lukas
        Language.Mutate
        Language.Pali
        Language.Power
        Language.RX
        Language.Sampler
        Language.Syntax
        Language.Type
        Machine.Acceptor.Inter
        Machine.Acceptor.Inter2
        Machine.Acceptor.Type
        Machine.Acceptor.Type2
        Machine.Akzeptieren
        Machine.Class
        Machine.Fun
        Machine.History
        Machine.Numerical.Config
        Machine.Numerical.Inter
        Machine.Numerical.Make
        Machine.Numerical.Type
        Machine.Var
        Machine.Vorrechnen
        Mysqlconnect
        NFA.Compress.Compressed
        NFA.Compress.Config
        NFA.Compress.Data
        NFA.Compress.Instance
        NFA.Compress.Inter
        NFA.Compress.Look
        NFA.Compress.Roll
        NFA.Convert
        NFA.Equiv.Challenger
        NFA.Equiv.Conf
        NFA.Equiv.Core
        NFA.Equiv.Generate
        NFA.Infinite
        NFA.Nerode.Congruent.Check
        NFA.Nerode.Congruent.Config
        NFA.Nerode.Congruent.Instance
        NFA.Nerode.Congruent.Quiz
        NFA.Nerode.Incongruent.Check
        NFA.Nerode.Incongruent.Config
        NFA.Nerode.Incongruent.Instance
        NFA.Nerode.Incongruent.Quiz
        NFA.Nerode.Incongruent.Solution
        NFA.Nerode.Separation.Check
        NFA.Nerode.Separation.Solution
        NFA.Property
        NFA.Quiz
        NFA.Roll
        NFA.Test
        NPDA.Accept_by
        NPDA.Beispiel
        NPDA.Check
        NPDA.Config
        NPDA.Config2
        NPDA.Det
        NPDA.Dot
        NPDA.Inter
        NPDA.Inter2
        NPDA.Konfiguration
        NPDA.Machine
        NPDA.Nachfolger
        NPDA.Property
        NPDA.Sane
        NPDA.Type
        Number.Base.Central
        Number.Base.Data
        Number.Base.Param
        Number.Float.Config
        Number.Float.Data
        Number.Float.From
        Number.Float.Near
        Number.Float.Roll
        Number.Float.To
        Number.Wert
        PCProblem.Data
        PCProblem.Generator
        PCProblem.Konfig
        PCProblem.Param
        PCProblem.Quiz
        PCProblem.Solver
        PCProblem.Type
        PL.Data
        PL.Find_Model
        PL.Interpretation
        PL.Param
        PL.Reader
        PL.Semantik
        PL.Signatur
        PL.Struktur
        PL.ToDoc
        PL.Tree
        PL.Type
        PL.Util
        Palindrom.Plain
        Partition.Beispiel
        Partition.Central
        Partition.Param
        Partition.Roll
        Prime.Check
        Prime.Factorize
        Program.Array.Config
        Program.Array.Expression
        Program.Array.Instance
        Program.Array.Operator
        Program.Array.Roll
        Program.Array.Semantics
        Program.Array.Statement
        Program.Array.Value
        Program.General.Central
        Program.General.Class
        Program.General.Environment
        Program.General.Program
        Program.General.Value
        Program.List.Expression
        Program.List.Instance
        Program.List.Operation
        Program.List.Semantics
        Program.List.Store
        Program.List.Value
        Pump.CF
        Pump.CF.Type
        Pump.Conf
        Pump.Conf2
        Pump.Inter
        Pump.Inter2
        Pump.Negativ
        Pump.Positiv
        Pump.Quiz
        Pump.REG
        Pump.REG.Type
        Pump.Type
        RAM
        RAM.Builtin
        RAM.Check
        RAM.Example
        RAM.Machine
        RAM.Make
        RAM.Memory
        RAM.Property
        RAM.State
        RAM.Step
        RAM.Type
        RM.Check
        RM.Machine
        RM.Make
        RM.Memory
        RM.State
        RM.Step
        RM.Type
        RSA.Break
        RSA.Break.Data
        RSA.Euclid
        RSA.Param
        RSA.Quiz
        Resolution.Action
        Resolution.Central
        Resolution.Config
        Resolution.Data
        Resolution.Execute
        Resolution.Roll
        Rewriting.Apply
        Rewriting.Check
        Rewriting.Derive
        Rewriting.Derive.Config
        Rewriting.Derive.Instance
        Rewriting.Derive.Quiz
        Rewriting.Overlap
        Rewriting.Roller
        Rewriting.SRS.Apply
        Rewriting.SRS.Raw
        Rewriting.SRS.Step
        Rewriting.SRS.Steps
        Rewriting.TRS
        Rewriting.TRS.Apply
        Rewriting.TRS.Derive
        Rewriting.TRS.Instance
        Rewriting.TRS.Machine
        Rewriting.TRS.Numerical
        Rewriting.TRS.Raw
        Rewriting.TRS.Step
        Rewriting.TRS.Steps
        Robots.Config
        Robots.Data
        Robots.Exact
        Robots.Examples
        Robots.Final
        Robots.Generator
        Robots.Hull
        Robots.Interface
        Robots.Inverse
        Robots.Move
        Robots.Nice
        Robots.Quiz
        Robots.Solver
        Robots3.Config
        Robots3.Data
        Robots3.Exact
        Robots3.Examples
        Robots3.Final
        Robots3.Generator
        Robots3.Hull
        Robots3.Interface
        Robots3.Inverse
        Robots3.Move
        Robots3.Nice
        Robots3.Quiz
        Robots3.Solver
        Robots3.TH
        Rushhour.Central
        Rushhour.Data
        Rushhour.Move
        SAT.Beispiel
        SAT.CNF
        SAT.Generator
        SAT.Param
        SAT.SAT
        SAT.State
        SAT.Types
        SAT.Wert
        SCS.Config
        SCS.Data
        SCS.Instance
        SCS.Quiz
        Sortier.Common.Config
        Sortier.Common.Util
        Sortier.Median.Check
        Sortier.Median.Param
        Sortier.Merge.Check
        Sortier.Merge.Param
        Sortier.Netz.Bild
        Sortier.Netz.Check
        Sortier.Netz.Example
        Sortier.Netz.Rechnung
        Sortier.Netz.Type
        Sortier.Netz.Xml
        Sortier.Programm.Check
        Sortier.Programm.Example
        Sortier.Programm.Exec
        Sortier.Programm.Type
        Specify.Check
        Specify.Config
        Specify.Constraint
        Specify.Definition
        Specify.Eval
        Specify.Expression
        Specify.Inter
        String_Matching.BM.Central
        String_Matching.BM.Instance
        String_Matching.BM.Semantics
        String_Matching.Config
        String_Matching.KMP.Central
        String_Matching.KMP.Instance
        String_Matching.KMP.Semantics
        String_Matching.Option
        Suggest
        Tree
        Tree.Class
        Tree.Dot
        Turing
        Turing.Check
        Turing.Config
        Turing.Dot
        Turing.Example
        Turing.Konfiguration
        Turing.Machine
        Turing.Make
        Turing.Nachfolger
        Turing.Property
        Turing.Type
        Type.Check
        Type.Data
        Type.Infer
        Type.Quiz
        Type.Tree
        Unify.Config
        Unify.Instance
        Unify.Instance.Data
        Unify.Main
        Unify.Roll
        Upload
        Upload.Config
        Util.Cache
        Util.Datei.Base
        Util.FailDoc
